Updated build targets. (C) whatthecommit.com